# odp-mppa

./: .dir-locals.el  Makefile  aminclude.am  configure.ac  ktest-wrapper.sh
apps/: Makefile.apps
apps/ipsec/: Makefile  install-deps.sh  ipsec.py  odp_generator.c  odp_ipsec.c  odp_ipsec_cache.c  odp_ipsec_cache.h  run.sh  start.sh  test.sh
apps/l2fwd/: Makefile  run.sh
apps/skel/: Makefile  example.c  run.sh
doc-kalray/: K1-ODP.tex
doc/implementers-guide/: Makefile.am
doc/process-guide/: Makefile.am
doc/users-guide/: Makefile.am
example/generator/: odp_generator.c
example/ipsec/: odp_ipsec.c  odp_ipsec_misc.h  odp_ipsec_sa_db.c
example/timer/: odp_timer_test.c
firmware/: Makefile
firmware/ioeth/: Makefile  main.c
firmware/iopcie/: ioddr-boot.c
firmware/iounified/: main.c
firmware/iounified-nopcie/: main.c
firmware/linux-emulator/: Makefile  main.c
helper/: Makefile.am
helper/test/: Makefile.am  odp_table.c
long/: Makefile
long/dispatch/: Makefile  dispatch_simple.c
long/linux-emulator/: Makefile  main.c  odp_rpc.c  odp_rpc_internal.h
long/pcie_send_recv/: Makefile  main.c
long/pcie_simple/: Makefile  pcie_simple.c
mk/: platforms.inc  rules.inc
mppaeth/: Makefile
test/: Makefile.inc
test/validation/: Makefile.am  Makefile.inc
test/validation/classification/: classification.h
test/validation/crypto/: odp_crypto_test_inp.c
test/validation/pktio/: pktio.c
test/validation/queue/: queue.c
test/validation/scheduler/: scheduler.c
test/validation/synchronizers/: synchronizers.c
test/validation/time/: time.c
(+154 files in other folders)
